[gd_scene load_steps=5 format=3 uid="uid://c2mw31lodgrlg"]

[ext_resource type="Script" path="res://Scenes/MenuButton.gd" id="1_te8jh"]
[ext_resource type="FontFile" uid="uid://dehjo7qp3a0ua" path="res://Fonts/Teko-SemiBold.ttf" id="2_t5jgo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hri1q"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hd5k0"]
bg_color = Color(0.701961, 0.282353, 0.352941, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[node name="Node2D" type="Node2D"]
script = ExtResource("1_te8jh")

[node name="Button" type="Button" parent="."]
offset_right = 96.0
offset_bottom = 25.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_t5jgo")
theme_override_font_sizes/font_size = 19
theme_override_styles/normal = SubResource("StyleBoxFlat_hri1q")
theme_override_styles/hover = SubResource("StyleBoxFlat_hd5k0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hd5k0")
theme_override_styles/disabled = SubResource("StyleBoxFlat_hri1q")
theme_override_styles/focus = SubResource("StyleBoxFlat_hd5k0")
text = "How to?"

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
